Added dto to request and response creation
