# server/src/dtos/responses/user-response.dto.ts
@@ -1,0 +1,7 @@
+
+import { UserType } from "../../types/userType.type";
+
+/**
+ * Represents a user object with database timestamps and ID.
+ */
+export interface UserCreationResponse extends UserType{}
