# server/src/interfaces/IUserController.interface.ts
@@ -1,3 +1,6 @@
+import { UserCreationRequest } from "../dtos/requests/user-request.dto";
+import { UserCreationResponse } from "../dtos/responses/user-response.dto";
+import { ErrorResponse } from "../models/error-response.model";
 
 export interface IUserController{
   loginUser(): Promise<any>;
@@ -5,5 +8,5 @@ export interface IUserController{
   forgotUser(): Promise<any>;
   resetUser(): Promise<any>;
   deleteUser(): Promise<any>;
-  createUser(): Promise<any>;
+  registerUser( requestBody: UserCreationRequest): Promise<UserCreationResponse |  ErrorResponse> ;
 }
